# fcc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ansible/: Cargo.toml
ansible/src/: main.rs
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  misc.rs
cli/src/commands/: config.rs  manifest.rs  mod.rs  policy.rs
cli/src/manifest/: configurations.rs  error.rs  misc.rs  mod.rs  policies.rs  validate.rs
cli/src/net/: mod.rs
cli/test/: manifest2.toml
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs
core/src/compliance/: misc.rs  mod.rs  test.rs
core/src/compliance/options/: error.rs  mod.rs  parse.rs
core/src/manifest/: configurations.rs  error.rs  misc.rs  mod.rs  policies.rs  validate.rs
core/src/parse/: error.rs  filter.rs  misc.rs  mod.rs
core/test/: config.txt  config_small.txt  config_small_real_options.txt  manifest1.toml  policy_small_options.txt  policy_small_real_options.txt
core/test/filter_line/: 1.txt  2.txt  3.txt
core/test/process_fcc_options/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
core/test/process_next_indent_level/: 1.txt  2.txt  3.txt  4.txt
core/test/process_parent_compliance_check/: 10_p.txt  11_p.txt  1_c.txt  1_p.txt  2_c.txt  2_p.txt  3_c.txt  3_p.txt  4_p.txt  5_p.txt  6_p.txt  7_p.txt  9_p.txt
