[package]
name = "ansible"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true

[[bin]]
name = "fcc_check_compliance"
path = "src/main.rs"

[dependencies]
fcc = { path = "../core", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"