[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true

[[bin]]
name = "fcc"
path = "src/main.rs"

[dependencies]
human-panic = "2.0.1"
tokio = { version="1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
clap_complete = "4.5"
env_logger = "0.11.5"
log = { workspace = true }
fcc = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.87"
regex = { workspace = true }
toml = "0.8.19"
# https://github.com/tailhook/serde-regex/commit/336bb456ecd146ba9e3fcc2fef71870f603d72c5
serde_regex = { git = "https://github.com/tailhook/serde-regex", rev = "336bb456ecd146ba9e3fcc2fef71870f603d72c5" }