[package]
name = "fcc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
regex = "1.11"
lazy_static = "1.5.0"
strum = { version = "0.26", features = ["derive"] }
serde = "1"
toml = "0.8.19"
# https://github.com/tailhook/serde-regex/commit/336bb456ecd146ba9e3fcc2fef71870f603d72c5
serde_regex = { git = "https://github.com/tailhook/serde-regex", rev = "336bb456ecd146ba9e3fcc2fef71870f603d72c5" }
serde_with = "3.11.0"